System Information
Operating system: Linux-5.3.12-1-MANJARO-x86_64-with-arch-Manjaro-Linux 64 Bits
Graphics card: Mesa DRI Intel(R) Haswell Desktop Intel Open Source Technology Center 4.5 (Core Profile) Mesa 19.2.6
Blender Version
Broken: version: 2.81 (sub 16), 2.82
Worked:
Short description of error
Perpendicular snapping working with options Center, Median and Active, but do not with Closest
Exact steps for others to reproduce the error
Please see video