Fix T72112: Perpendicular snapping with closest not working

The closest target is calculated only after a snap point is found.
So use `center_global` while the target is not calculated.